--- a/components/JoinUs/css/JoinUs.module.css
+++ b/components/JoinUs/css/JoinUs.module.css
@@ -15,19 +15,24 @@ article.input_wrapper {
   border-radius: 5px;
   margin: 10px 0;
   height: 38px;
+  padding: 0 2px;
 
   display: flex;
   align-items: center;
 }
 
 input.input {
-  height: 85%;
+  height: 36px;
   margin: 0 4px;
   flex-grow: 1;
   background: transparent;
-  border: 0;
+  border: none;
+
+  font-size: 12px;
+  color: #C7CAD1
 }
 
 input.input::placeholder {
+  font-size: 11px;
   color: #C7CAD1;
 }
