--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,13 @@ a {
   text-decoration: none;
 }
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 * {
   box-sizing: border-box;
 }
