--- a/components/Button/css/Button.module.css
+++ b/components/Button/css/Button.module.css
@@ -96,3 +96,9 @@ a.dark:after {
 a.dark:active:after {
   box-shadow: 0 0 0 0 transparent;
 }
+
+@media screen and (min-width: 900px) {
+  a.button {
+    cursor: pointer;
+  }
+}
