--- a/components/Popup/css/Popup.module.css
+++ b/components/Popup/css/Popup.module.css
@@ -2,8 +2,6 @@ div.wrapper {
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background: #000;
-  opacity: .4;
   display: none;
   justify-content: center;
   align-items: center;
@@ -12,8 +10,18 @@ div.wrapper {
   z-index: 1000;
 }
 
+div.wrapper ~ * {
+  transition: all .2s ease-in-out;
+}
+
 div.wrapper.active {
   display: flex;
+}
+
+div.wrapper.active ~ * {
+  filter: blur(3px) grayscale(100%);
+  overflow: hidden;
+  height: 100vh;
 }
 
 section.popup {
@@ -25,16 +33,39 @@ section.popup {
   padding: 50px 20px;
   border: 0.775047px solid #4D4E54;
   border-radius: 10px;
+  background: #fff;
+  overflow: auto;
 }
 
 div.close {
-
+  position: absolute;
+  cursor: pointer;
+  top: 26px;
+  left: 26px;
 }
 
 article.content {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 div.imageWrapper {
+  opacity: 1;
+  width: 80vw;
+  height: 30vw;
+  position: relative;
+  display: none;
+}
 
+@media screen and (min-width: 800px) {
+
+  div.imageWrapper {
+    display: block;
+    opacity: 1;
+    width: 30vw;
+    max-width: 500px;
+    height: 20vw;
+    position: relative;
+  }
 }
