--- a/components/JoinUs/css/JoinUs.module.css
+++ b/components/JoinUs/css/JoinUs.module.css
@@ -104,6 +104,11 @@ article.contact_wrapper {
     flex-grow: 1;
     margin-right: 4px;
     max-width: 400px;
+    position: relative;
+  }
+
+  input.input {
+    width: calc( 100% - 112px);
   }
 
   span.or {
